tdf#132271 DOCX: import change tracking in floating tables

Change-Id: If892a16875ef16015639aacf8359d15c953fb1d2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/102149
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>