writerfilter/source/dmapper/DomainMapper_Impl.cxx
@@ -2633,7 +2633,8 @@ void DomainMapper_Impl::CreateRedline(uno::Reference<text::XTextRange> const& xR
             uno::Reference < text::XRedline > xRedline( xRange, uno::UNO_QUERY_THROW );
             xRedline->makeRedline( sType, aRedlineProperties );
         }
-        else
+        // store frame and (possible floating) table redline data for restoring them after frame conversion
+        if (m_bIsActualParagraphFramed || (hasTableManager() && getTableManager().isInTable()))
         {
             aFramedRedlines.push_back( uno::makeAny(xRange) );
             aFramedRedlines.push_back( uno::makeAny(sType) );
